package transport;

public interface Transport {
    void deliver (String cargo, String destination);
}
