@startuml
title Factory Method - Logistics

interface Transport <<Product>> {
    +deliver(cargo: String, destination: String): void
}

class Truck <<Concrete Product>> {
    +deliver(cargo: String, destination: String): void
}

class Ship <<Concrete Product>> {
    +deliver(cargo: String, destination: String): void
}

abstract class Logistics <<Creator>> {
    +createTransport(): Transport
    +planDelivery(cargo: String, destination: String): void
}

class RoadLogistics <<Concrete Creator>> {
    +createTransport(): Transport
}

class SeaLogistics <<Concrete Creator>> {
    +createTransport(): Transport
}

Transport <|.. Truck
Transport <|.. Ship

Logistics <|-- RoadLogistics
Logistics <|-- SeaLogistics

RoadLogistics ..> Truck : creates
SeaLogistics ..> Ship : creates

Logistics ..> Transport : uses

@enduml